--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,43 @@
 language: android
+sudo: false
+
+env:
+  global:
+    - ANDROID_API_LEVEL=18
+    - ANDROID_BUILD_TOOLS_VERSION=23.0.2
+    - ANDROID_ABI=default/armeabi-v7a
+    - ADB_INSTALL_TIMEOUT=8
+
+before_script:
+  # Create and start emulator
+  - android list targets
+  - echo no | android create avd --force -n test -t "android-"$ANDROID_API_LEVEL --abi $ANDROID_ABI
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+  - adb devices
+  - android list target
 
 android:
   components:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
-    # - platform-tools
-    # - tools
+    - platform-tools
+    - tools
 
     # The BuildTools version used by your project
-    - build-tools-23.0.2
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
 
     # The SDK version used to compile your project
+    - android-$ANDROID_API_LEVEL 
     - android-23
 
     # Additional components
-    # - extra-google-google_play_services
-    # - extra-google-m2repository
-    # - extra-android-m2repository
-    # - addon-google_apis-google-19
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+    - addon-google_apis-google-$ANDROID_API_LEVEL
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-19
-    # - sys-img-x86-android-17
+    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
